--- a/qgcimages.qrc
+++ b/qgcimages.qrc
@@ -195,6 +195,9 @@
         <file alias="TuningComponentIcon.png">src/AutoPilotPlugins/Common/Images/TuningComponentIcon.png</file>
         <file alias="vehicleArrowOpaque.svg">src/FlightMap/Images/vehicleArrowOpaque.svg</file>
         <file alias="vehicleArrowOutline.svg">src/FlightMap/Images/vehicleArrowOutline.svg</file>
+        <file alias="vehicleBrandImage.svg">src/FlightMap/Images/vehicleBrandImage.svg</file>
+        <file alias="loginPageImage.svg">src/FlightMap/Images/loginPageImage.svg</file>
+        <file alias="homePageImage.svg">src/FlightMap/Images/homePageImage.svg</file>
         <file alias="VehicleDown.png">src/AutoPilotPlugins/PX4/Images/VehicleDown.png</file>
         <file alias="VehicleDownRotate.png">src/AutoPilotPlugins/PX4/Images/VehicleDownRotate.png</file>
         <file alias="VehicleLeft.png">src/AutoPilotPlugins/PX4/Images/VehicleLeft.png</file>
@@ -215,4 +218,5 @@
         <file alias="ZoomPlus.svg">src/FlightMap/Images/ZoomPlus.svg</file>
         <file alias="Viewer3D/City3DMapIcon.svg">src/Viewer3D/Images/city_3d_map_icon.svg</file>
     </qresource>
+    <qresource prefix="/"/>
 </RCC>
