--- a/custom-example/custom.qrc
+++ b/custom-example/custom.qrc
@@ -35,7 +35,7 @@
         <file alias="QGroundControl/FlightDisplay/FlyViewToolStripActionList.qml">src/FlyViewToolStripActionList.qml</file>
     </qresource>
     <qresource prefix="Custom/res">
-        <file alias="QGCLogoFull.svg">res/QGCLogoFull.svg</file>
+        <file alias="LeherLogoFull.svg">res/LeherLogoFull.svg</file>
         <file alias="qgroundcontrol.ico">res/icons/custom_qgroundcontrol.ico</file>
     </qresource>
 </RCC>
